@@ -1,3 +1,7 @@
+2005-04-13  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-decode-buffer): Decode "\240" into " ".
+
 2005-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun/sb-sankei.el (shimbun-sankei-x-face-alist): Renew.
